--- a/server/user/package.json
+++ b/server/user/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "cookie-parser": "^1.4.6",
     "njwt": "^1.2.0",
     "nodemailer": "^6.9.3",
     "uuid": "^9.0.0"
