--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.2.0",
     "@types/socket.io-client": "^3.0.0",
     "material-icons": "^1.11.1",
+    "njwt": "^2.0.0",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.1",
     "tslib": "^2.3.0",
