--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "1.0.0",
   "scripts": {
-    "start": "ng serve -o --proxy-config proxy.conf.json",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "lint": "eslint . --ext .ts",
@@ -23,6 +23,7 @@
     "@angular/router": "^15.2.0",
     "@types/socket.io-client": "^3.0.0",
     "material-icons": "^1.11.1",
+    "moment": "^2.29.4",
     "njwt": "^2.0.0",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.1",
