--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/socket.io-client": "^3.0.0",
     "material-icons": "^1.11.1",
     "moment": "^2.29.4",
+    "ngx-mask": "^15.1.5",
     "njwt": "^2.0.0",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.1",
