--- a/config.json
+++ b/config.json
@@ -22,7 +22,18 @@
 	},
 	"user": {
 		"is": {
-			"admin": "ceo@webart.work"
+			"admin": "admin@tafu.com"
+		}
+	},
+	"mail": {
+		"host": "smtp-relay.brevo.com",
+		"port": 587,
+		"secure": false,
+		"apiKey": "'AIzaSyAI5geMFK5UO4ncMPPMrVRPhSGPJoPC9zw'",
+		"from": "tafu.app@gmail.com",
+		"auth": {
+			"user": "tafu.app@gmail.com",
+			"pass": "tafuAPP!"
 		}
 	}
 }
